index frame rough

--- a/index.html
+++ b/index.html
@@ -4,11 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Eugene Park Portfolio</title>
     <link rel="stylesheet" href="./Assets/reset.css">
     <link rel="stylesheet" href="./Assets/style.css">
 </head>
 <body>
-    
+    <!-- Top Banner  -->
+    <h1>top banner</h1>
+    <header>
+        <!-- nav bar links -->
+        <nav>
+            <ul class="navbar">
+                <li>About Me</li>
+                <li>Second Item</li>
+                <li>third item</li>
+                <li>fourth item</li>
+            </ul>
+        </nav>
+    </header>
+    <figure>
+    </figure>
+    <section>
+        <article>article 1</article>
+        <article>article 2</article>
+        <article>article 3</article>
+        <article>another article etc</article>
+    </section>
+    <footer>
+        <ul>
+            <li>Phone Number</li>
+            <li>Email</li>
+            <li>more contact info</li>
+        </ul>
+    </footer>
 </body>
 </html>
