added proxy variables to style sheet

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <!-- Top Banner  -->
-    <h1>top banner</h1>
     <header>
+        <h1 class="title">Header Header adsfasdf</h1>
         <!-- nav bar links -->
         <nav>
             <ul class="navbar">
@@ -31,7 +31,7 @@
         <article>another article etc</article>
     </section>
     <footer>
-        <ul>
+        <ul class="footlist">
             <li>Phone Number</li>
             <li>Email</li>
             <li>more contact info</li>
