got overall structure loosly complete

--- a/index.html
+++ b/index.html
@@ -15,20 +15,47 @@
         <!-- nav bar links -->
         <nav>
             <ul class="navbar">
-                <li>About Me</li>
-                <li>Second Item</li>
-                <li>third item</li>
-                <li>fourth item</li>
+                <li>About</li>
+                <li>Portfolio</li>
+                <li>Social Media</li>
+                <li>Contact</li>
             </ul>
         </nav>
     </header>
     <figure>
     </figure>
-    <section>
+    <section id="about">
         <article>article 1</article>
         <article>article 2</article>
         <article>article 3</article>
         <article>another article etc</article>
+    </section>
+    <section id="portfolio">
+        <article>
+            <h2>HTML</h2>
+        </article>
+        <article>
+            <h2>CSS</h2>
+        </article>
+        <article>
+            <h2>Java/JavaScript</h2>
+        </article>
+        <article>
+            <h2>blah blah 3</h2>
+        </article>
+        <article>
+            <h2>blah blah 4</h2>
+        </article>
+    </section>
+    <section id="social media">
+        <article>
+            <h2>links for social media</h2>
+        </article>
+    </section>
+    <section>
+        <article>
+            <h2>contact form goes here</h2>
+        </article>
     </section>
     <footer>
         <ul class="footlist">
