got some flex commands working

--- a/index.html
+++ b/index.html
@@ -25,25 +25,22 @@
     <figure>
     </figure>
     <section id="about">
-        <article>article 1</article>
-        <article>article 2</article>
-        <article>article 3</article>
-        <article>another article etc</article>
+        <p>I speak about myself akwardly here</P>
     </section>
     <section id="portfolio">
-        <article>
+        <article class="portfolio-card">
             <h2>HTML</h2>
         </article>
-        <article>
+        <article class="portfolio-card">
             <h2>CSS</h2>
         </article>
-        <article>
+        <article class="portfolio-card">
             <h2>Java/JavaScript</h2>
         </article>
-        <article>
+        <article class="portfolio-card">
             <h2>blah blah 3</h2>
         </article>
-        <article>
+        <article class="portfolio-card">
             <h2>blah blah 4</h2>
         </article>
     </section>
