latest working copy

--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
 <body>
     <!-- Top Banner  -->
     <header>
-        <h1 class="title">Header Header adsfasdf</h1>
+        <h1>Header Header adsfasdf</h1>
         <!-- nav bar links -->
         <nav>
             <ul class="navbar">
                 <li>About</li>
                 <li>Portfolio</li>
-                <li>Social Media</li>
                 <li>Contact</li>
             </ul>
         </nav>
+        <!-- <img src="./Assets/Banner.png"> -->
     </header>
     <figure>
     </figure>
     <section id="about">
-        <p>I speak about myself akwardly here</P>
+        <article>About Me</article>
+        <p >I speak about myself akwardly here</P>
     </section>
     <section id="portfolio">
+        <h2>Projects</h2>
         <article class="portfolio-card">
             <h2>HTML</h2>
         </article>
