re worked the css file to target the correct sections

--- a/index.html
+++ b/index.html
@@ -5,57 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eugene Park Portfolio</title>
-    <link rel="stylesheet" href="./Assets/reset.css">
+    <!-- <link rel="stylesheet" href="./Assets/reset.css"> -->
     <link rel="stylesheet" href="./Assets/style.css">
 </head>
 <body>
     <!-- Top Banner  -->
     <header>
-        <h1>Header Header adsfasdf</h1>
-        <!-- nav bar links -->
+        <!-- Page Navigation links -->
+        <h1>Eugene Park</h1>
         <nav>
-            <ul class="navbar">
-                <li>About</li>
-                <li>Portfolio</li>
-                <li>Contact</li>
+            <ul>
+                <li>
+                    <a href="#about">About Me</a>
+                </li>
+                <li>
+                    <a href="#Portfolio">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
             </ul>
         </nav>
-        <!-- <img src="./Assets/Banner.png"> -->
+        <!--  -->
     </header>
-    <figure>
-    </figure>
+
     <section id="about">
-        <article>About Me</article>
-        <p >I speak about myself akwardly here</P>
+        <h2>About Me</h2>
+        <p>I speak about myself akwardly here</P>
     </section>
     <section id="portfolio">
         <h2>Projects</h2>
-        <article class="portfolio-card">
-            <h2>HTML</h2>
+        <ul>
+        <li>
+            <article class="portfolio-card">
+                <h3>HTML</h3>
+                <p>Here's What I did with HTML</p>
+            </article>
+        </li>
+        <li>
+            <article class="portfolio-card">
+                <h3>CSS</h3>
+            </article>
+        </li>
+        <li>
+            <article class="portfolio-card">
+                <h3>Java/JavaScript</h3>
+            </article>
+        </li>
+        <li>
+            <article class="portfolio-card">
+                <h3>blah blah 3</h3>
         </article>
-        <article class="portfolio-card">
-            <h2>CSS</h2>
-        </article>
-        <article class="portfolio-card">
-            <h2>Java/JavaScript</h2>
-        </article>
-        <article class="portfolio-card">
-            <h2>blah blah 3</h2>
-        </article>
-        <article class="portfolio-card">
-            <h2>blah blah 4</h2>
-        </article>
+        </li>
+        <li>
+            </article>
+            <article class="portfolio-card">
+                <h3>blah blah 4</h3>
+            </article>
+        </li>
+        </ul>
     </section>
-    <section id="social media">
-        <article>
-            <h2>links for social media</h2>
-        </article>
-    </section>
-    <section>
-        <article>
-            <h2>contact form goes here</h2>
-        </article>
-    </section>
+</body>
+
     <footer>
         <ul class="footlist">
             <li>Phone Number</li>
@@ -63,5 +74,3 @@
             <li>more contact info</li>
         </ul>
     </footer>
-</body>
-</html>
