--- a/index.html
+++ b/index.html
@@ -33,44 +33,51 @@
         <h2>About Me</h2>
         <p>I speak about myself akwardly here</P>
     </section>
+
     <section id="portfolio">
         <h2>Projects</h2>
         <ul>
-        <li>
-            <article class="portfolio-card">
-                <h3>HTML</h3>
-                <p>Here's What I did with HTML</p>
-            </article>
-        </li>
-        <li>
-            <article class="portfolio-card">
-                <h3>CSS</h3>
-            </article>
-        </li>
-        <li>
-            <article class="portfolio-card">
+            <li>
+                <article class="portfolio-card">
+                    <h3>HTML</h3>
+                    <p>Here's What I did with HTML</p>
+                </article>
+            </li>
+            <li>
+                <article class="portfolio-card">
+                    <h3>CSS</h3>
+                    <p>Here's some css stuff</p>
+                </article>
+            </li>
+            <li>
+                <article class="portfolio-card">
                 <h3>Java/JavaScript</h3>
-            </article>
-        </li>
-        <li>
-            <article class="portfolio-card">
-                <h3>blah blah 3</h3>
-        </article>
-        </li>
-        <li>
-            </article>
-            <article class="portfolio-card">
-                <h3>blah blah 4</h3>
-            </article>
-        </li>
+                <p>Java stuff</p>
+                </article>
+            </li>
+            <li>
+                <article class="portfolio-card">
+                    <h3>blah blah 3</h3>
+                    <p>another Projects</p>
+                </article>
+            </li>
+            <li>
+                <article class="portfolio-card">
+                    <h3>blah blah 4</h3>
+                    <p>once more</p>
+                </article>
+            </li>
         </ul>
     </section>
-</body>
 
     <footer>
-        <ul class="footlist">
+        <ul>
             <li>Phone Number</li>
             <li>Email</li>
-            <li>more contact info</li>
+            <li>Social Media</li>
         </ul>
     </footer>
+
+</body>
+
+
