got media query working

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eugene Park Portfolio</title>
-    <!-- <link rel="stylesheet" href="./Assets/reset.css"> -->
+    <link rel="stylesheet" href="./Assets/reset.css">
     <link rel="stylesheet" href="./Assets/style.css">
 </head>
 <body>
@@ -31,7 +31,14 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I speak about myself akwardly here</P>
+        <!-- <p>I speak about myself akwardly here</P> -->
+        <ul>
+                <li>Mern Stack</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>etc..</li>
+        </ul>
     </section>
 
     <section id="portfolio">
@@ -39,20 +46,20 @@
         <ul>
             <li>
                 <article class="portfolio-card">
-                    <h3>HTML</h3>
-                    <p>Here's What I did with HTML</p>
+                    <h3>Project 1</h3>
+                    <p>Here's What I did</p>
                 </article>
             </li>
             <li>
                 <article class="portfolio-card">
-                    <h3>CSS</h3>
-                    <p>Here's some css stuff</p>
+                    <h3>project 2</h3>
+                    <p>asdf</p>
                 </article>
             </li>
             <li>
                 <article class="portfolio-card">
-                <h3>Java/JavaScript</h3>
-                <p>Java stuff</p>
+                <h3>project 3</h3>
+                <p>asdf</p>
                 </article>
             </li>
             <li>
@@ -70,7 +77,7 @@
         </ul>
     </section>
 
-    <footer>
+    <footer id="contact">
         <ul>
             <li>Phone Number</li>
             <li>Email</li>
