happy with header layout and media query

--- a/index.html
+++ b/index.html
@@ -12,20 +12,26 @@
     <!-- Top Banner  -->
     <header>
         <!-- Page Navigation links -->
-        <h1>Eugene Park</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#about">About Me</a>
-                </li>
-                <li>
-                    <a href="#Portfolio">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-        </nav>
+        <div>
+            <h2 class="intro">hello my name is,</h2>
+            <h1>Eugene Park</h1>
+            <h2>I make thing on the internet</h2>
+        </div>
+        <div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#Portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
         <!--  -->
     </header>
 
