finished website with placeholders

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="#about">About Me</a>
                     </li>
                     <li>
-                        <a href="#Portfolio">Portfolio</a>
+                        <a href="#portfolio">Portfolio</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -36,7 +36,7 @@
     </header>
 
     <section id="about">
-        <h2>About Me</h2>
+        <h2 id="about-me-background">About Me</h2>
         <!-- <p>I speak about myself akwardly here</P> -->
         <ul>
                 <li>Mern Stack</li>
@@ -85,9 +85,9 @@
 
     <footer id="contact">
         <ul>
-            <li>Phone Number</li>
-            <li>Email</li>
-            <li>Social Media</li>
+            <li>Phone Number || 555-555-5555</li>
+            <li>Email || test@test.com</li>
+            <li><a href="linkedin.com">LinkedIn</a> </li>
         </ul>
     </footer>
 
