fixed issue where flex would not wrap

--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
     <!-- Top Banner  -->
     <header>
         <!-- Page Navigation links -->
-        <div>
-            <h2 class="intro">hello my name is,</h2>
+        <div class="profilePic">
+            <img src="./Assets/Profile Picture.jpg" alt="Profile Picture" height= 10vh width=10%>
+        </div>
+        <div class="intro">
+            <h2 >hello my name is,</h2>
             <h1>Eugene Park</h1>
-            <h2>I make thing on the internet</h2>
+            <h2>I make things on the internet</h2>
         </div>
         <div>
             <nav>
                 <ul>
                     <li>
-                        <a href="#about">About Me</a>
+                        <a href="#about">About</a>
                     </li>
                     <li>
                         <a href="#portfolio">Portfolio</a>
@@ -32,26 +35,28 @@
                 </ul>
             </nav>
         </div>
-        <!--  -->
+
+
     </header>
 
     <section id="about">
-        <h2 id="about-me-background">About Me</h2>
+        <h2 id="about-me-background">About</h2>
         <!-- <p>I speak about myself akwardly here</P> -->
         <ul>
-                <li>Mern Stack</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>etc..</li>
+            <li>Mern Stack</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>etc..</li>
         </ul>
+        
     </section>
 
     <section id="portfolio">
         <h2>Projects</h2>
         <ul>
             <li>
-                <article class="portfolio-card">
+                <article class="portfolio-card" id="first-project">
                     <h3>Project 1</h3>
                     <p>Here's What I did</p>
                 </article>
