added some pictures to the section

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" href="./Assets/style.css">
 </head>
 <body>
-    <!-- Top Banner  -->
     <header>
         <!-- Page Navigation links -->
         <div class="profilePic">
-            <img src="./Assets/Profile Picture.jpg" alt="Profile Picture" height= 10vh width=10%>
+            <img src="./Assets/Profile Picture.jpg" alt="Profile Picture">
         </div>
         <div class="intro">
             <h2 >hello my name is,</h2>
@@ -58,31 +57,41 @@
             <li>
                 <article class="portfolio-card" id="first-project">
                     <h3>Project 1</h3>
-                    <p>Here's What I did</p>
+                    <p>project 1 description
+                        <a href="https://magiccrouton.github.io/EugeneParkHW1-GTbootcamp/"><img class="projectImage" src="./Assets/placeholder.jpg" alt="Project 1 Photo"></a>
+                    </p>
                 </article>
             </li>
             <li>
-                <article class="portfolio-card">
+                <article class="portfolio-card" id="second-project">
                     <h3>project 2</h3>
-                    <p>asdf</p>
+                    <p>asdf
+                    <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder 2.jpg" alt="Project 2 Photo"></a>
+                    </p>
                 </article>
             </li>
             <li>
-                <article class="portfolio-card">
+                <article class="portfolio-card" id="third-project">
                 <h3>project 3</h3>
-                <p>asdf</p>
+                <p>asdf
+                <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder 3.jpg" alt="Project 3 Photo"></a>
+                </p>
                 </article>
             </li>
             <li>
-                <article class="portfolio-card">
+                <article class="portfolio-card" id="fourth-project">
                     <h3>blah blah 3</h3>
-                    <p>another Projects</p>
+                    <p>another Projects
+                    <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder 4.jpg" alt="Project 4 Photo"></a>
+                    </p>
                 </article>
             </li>
             <li>
-                <article class="portfolio-card">
+                <article class="portfolio-card" id="fifth-project">
                     <h3>blah blah 4</h3>
-                    <p>once more</p>
+                    <p>once more
+                    <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder 5.jpg" alt="Project 5 Photo"></a>
+                    </p>
                 </article>
             </li>
         </ul>
@@ -92,7 +101,7 @@
         <ul>
             <li>Phone Number || 555-555-5555</li>
             <li>Email || test@test.com</li>
-            <li><a href="linkedin.com">LinkedIn</a> </li>
+            <li><a href="https://www.linkedin.com/">Linkedin</a> </li>
         </ul>
     </footer>
 
