added links and made divisions in portfolio sections

--- a/index.html
+++ b/index.html
@@ -56,42 +56,57 @@
         <ul>
             <li>
                 <article class="portfolio-card" id="first-project">
-                    <h3>Project 1</h3>
-                    <p>project 1 description
+                    <div class="portfolioWordSplash">
+                        <h3>Project 1</h3>
+                        <p>project 1 description</p>
+                    </div>
+                    <div class="imagePlacement">
                         <a href="https://magiccrouton.github.io/EugeneParkHW1-GTbootcamp/"><img class="projectImage" src="./Assets/placeholder.jpg" alt="Project 1 Photo"></a>
-                    </p>
+                    </div>
                 </article>
             </li>
             <li>
                 <article class="portfolio-card" id="second-project">
-                    <h3>project 2</h3>
-                    <p>asdf
-                    <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder 2.jpg" alt="Project 2 Photo"></a>
-                    </p>
+                    <div class="portfolioWordSplash">
+                        <h3>project 2</h3>
+                        <p>asdf</p>
+                    </div>
+                    <div class="imagePlacement">
+                        <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder 2.jpg" alt="Project 2 Photo"></a>
+                    </div>
                 </article>
             </li>
             <li>
                 <article class="portfolio-card" id="third-project">
-                <h3>project 3</h3>
-                <p>asdf
-                <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder 3.jpg" alt="Project 3 Photo"></a>
-                </p>
+                    <div class="portfolioWordSplash">
+                        <h3>project 3</h3>
+                        <p>asdf </p>
+                    </div>
+                    <div class="imagePlacement">
+                        <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder 3.jpg" alt="Project 3 Photo"></a>
+                    </div>
                 </article>
             </li>
             <li>
                 <article class="portfolio-card" id="fourth-project">
-                    <h3>blah blah 3</h3>
-                    <p>another Projects
-                    <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder 4.jpg" alt="Project 4 Photo"></a>
-                    </p>
+                    <div class="portfolioWordSplash">
+                        <h3>project 4</h3>
+                        <p>another Project description</p>
+                    </div>
+                    <div class="imagePlacement">
+                        <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder 4.jpg" alt="Project 4 Photo"></a>
+                    </div>
                 </article>
             </li>
             <li>
                 <article class="portfolio-card" id="fifth-project">
-                    <h3>blah blah 4</h3>
-                    <p>once more
-                    <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder 5.jpg" alt="Project 5 Photo"></a>
-                    </p>
+                    <div class="portfolioWordSplash">
+                        <h3>project 5</h3>
+                        <p>once more</p>
+                    </div>
+                    <div class="imagePlacement">
+                        <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder 5.jpg" alt="Project 5 Photo"></a>
+                    </div>
                 </article>
             </li>
         </ul>
