added a web font and changed the sizing of the header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eugene Park Portfolio</title>
     <link rel="stylesheet" href="./Assets/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Assets/style.css">
 </head>
 <body>
@@ -15,7 +18,7 @@
             <img src="./Assets/Profile Picture.jpg" alt="Profile Picture">
         </div>
         <div class="intro">
-            <h2 >hello my name is,</h2>
+            <h2 >Hello, I'm</h2>
             <h1>Eugene Park</h1>
             <h2>I make things on the internet</h2>
         </div>
