added some details to about section and a couple more litle things

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
 
     <section id="about">
-        <h2 id="about-me-background">About</h2>
+        <h2 id="about-me-background">The things I do..</h2>
         <!-- <p>I speak about myself akwardly here</P> -->
         <ul>
             <li>Mern Stack</li>
