--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <p>project 1 description</p>
                     </div>
                     <div class="imagePlacement">
-                        <a href="https://magiccrouton.github.io/EugeneParkHW1-GTbootcamp/"><img class="projectImage" src="./Assets/placeholder.jpg" alt="Project 1 Photo"></a>
+                        <a href="https://magiccrouton.github.io/EugeneParkHW1-GTbootcamp/"><img class="projectImage" src="https://drive.google.com/uc?id=1Z-iEwUXptnpYS_iLQWohpRgvF93kJvP5" alt="Project 1 Photo"></a>
                     </div>
                 </article>
             </li>
@@ -75,7 +75,7 @@
                         <p>asdf</p>
                     </div>
                     <div class="imagePlacement">
-                        <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder2.jpg" alt="Project 2 Photo"></a>
+                        <a href="https://github.com/MagicCrouton"><img class="projectImage" src="https://drive.google.com/uc?id=1Z-ByzzRHBjrWPu0aCt5EmTfX8tf4IAxF" alt="Project 2 Photo"></a>
                     </div>
                 </article>
             </li>
@@ -86,7 +86,7 @@
                         <p>asdf </p>
                     </div>
                     <div class="imagePlacement">
-                        <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder3.jpg" alt="Project 3 Photo"></a>
+                        <a href="https://github.com/MagicCrouton"><img class="projectImage" src="https://drive.google.com/uc?id=1YvzcRI0m-C-Ki_hG1VyX4LdsP1AsGVgb" alt="Project 3 Photo"></a>
                     </div>
                 </article>
             </li>
@@ -97,7 +97,7 @@
                         <p>another Project description</p>
                     </div>
                     <div class="imagePlacement">
-                        <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder4.jpg" alt="Project 4 Photo"></a>
+                        <a href="https://github.com/MagicCrouton"><img class="projectImage" src="https://drive.google.com/uc?id=1Ys5BS4Z-ouXZJFilQ8cznv8Sdae1F0c5" alt="Project 4 Photo"></a>
                     </div>
                 </article>
             </li>
@@ -108,7 +108,7 @@
                         <p>once more</p>
                     </div>
                     <div class="imagePlacement">
-                        <a href="https://github.com/MagicCrouton"><img class="projectImage" src="./Assets/Placeholder5.jpg" alt="Project 5 Photo"></a>
+                        <a href="https://github.com/MagicCrouton"><img class="projectImage" src="https://drive.google.com/uc?id=1YpcG2flV68La6LD78nNvT3QrXInc8G0p" alt="Project 5 Photo"></a>
                     </div>
                 </article>
             </li>
