added a better quote

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div class="intro">
             <h2 >Hello, I'm</h2>
             <h1>Eugene Park</h1>
-            <h2>I make things on the internet</h2>
+            <h2>It may not be pretty</h2>
+            <h2>   but it works..</h2>
         </div>
         <div>
             <nav>
