added first portfolio item

--- a/index.html
+++ b/index.html
@@ -61,11 +61,24 @@
             <li>
                 <article class="portfolio-card" id="first-project">
                     <div class="portfolioWordSplash">
-                        <h3>Project 1</h3>
-                        <p>project 1 description</p>
+                        <h3>AI Intergration via API</h3>
+                        <p>
+                            This app leverages Open Ai's Powerful DALLE API and Chat GPT 3 to generate comic book panes with relative captions.
+                            To challenge the functionality, user input is taken in the form of a madlib, which is generated from 4 hardcoded stories,
+                            and fed to the DALL-E API and Chat GPT to concurrently generate an illustration and caption based on user input.
+                            One of the major advantages of utilizing AI is that virtually any input even empty input can be ingested and produce
+                            a coherent illustration and caption. In addition, a seemingly infinite variation of stories and pictures can be generated
+                            off a single story format with the same inputs. 
+                        </p>
+                        <p>
+                            The site itself demonstrates a practicle use case of mostly vanilla JavaScript (with some jquery) to call API functions to
+                            give the site the ability to complete more complicated tasks. The site does not rely on a remote server for API authentication
+                            or use .env files to hide API keys. A simple workaround is put in place where the user is instructed to create a new API key if 
+                            the site does not detect an API key in local memory. I can't wait for you to try the site out!
+                        </p>
                     </div>
                     <div class="imagePlacement">
-                        <a href="https://magiccrouton.github.io/EugeneParkHW1-GTbootcamp/"><img class="projectImage" src="https://drive.google.com/uc?id=1Z-iEwUXptnpYS_iLQWohpRgvF93kJvP5" alt="Project 1 Photo"></a>
+                        <a href="https://magiccrouton.github.io/theMostMagicalCrouton/"><img class="projectImage" src="https://drive.google.com/uc?id=1oI2X2utiM_BJUSdYzAJqCXZ82MLxpxIh" alt="Project 1 Photo"></a>
                     </div>
                 </article>
             </li>
